# libspdm

./: .gitignore  CMakeLists.txt
os_stub/spdm_device_secret_lib/: CMakeLists.txt  lib.c
